fixed header alignment when loggedIn

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,6 +38,15 @@
 
   transition: 1s;
 }
+.LogButton-a {
+  color: #d8e0e8;
+  font-family: "Graphik-Web", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: .9rem;
+
+  transition: 1s;
+}
 
 .Header-a:hover {
   color: white;
