--- a/src/components/Log.css
+++ b/src/components/Log.css
@@ -1,28 +1,28 @@
 .LogButton{
   box-sizing: border-box;
-  line-height: 13px;
-  padding-bottom: 6px;
-  padding-left: 26px;
-  padding-top: 6px;
-  position: absolute;
-  right: 23px;
-  text-align: left;
-  top: 24px;
-  width: 67px;
+    line-height: 13px;
+    padding-bottom: 6px;
+    padding-left: 26px;
+    padding-top: 6px;
 
-  background: #00ac1c;
-  box-shadow: inset 0 1px 0 hsla(0,0%,100%,.3);
-  color: #f4fcf0;
-  cursor: pointer;
+    position: relative;
+    right: 0;
+    text-align: left;
+    top: 0;
+    width: 67px;
 
-  border: none;
-  border-radius: 3px;
+    background: #00ac1c;
+    box-shadow: inset 0 1px 0 hsla(0,0%,100%,.3);
+    color: #f4fcf0;
+    cursor: pointer;
+    border: none;
+    border-radius: 3px;
 
-  display: inline-block;
-  font-family: GraphikWeb,sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  letter-spacing: .075em;
+    display: inline-block;
+    font-family: GraphikWeb,sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: .075em;
 }
 
 .LogButton:after {
@@ -58,13 +58,13 @@
     opacity: 0;
     pointer-events: none;
     position: fixed;
-    top: 50%;
+    top: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 50%);
     background-color: #14181c;
     padding: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
+    z-index: 10;
     transition: opacity 0.3s ease-in-out;
   }
   
@@ -123,11 +123,6 @@
     cursor: pointer;
   }
   
-  /* Optional: Add some styles for the film list */
-  .LogForm ul {
-    list-style-type: none;
-    padding: 0;
-  }
   
   .LogForm li {
     margin-bottom: 5px;
