--- a/src/components/MyFilms/MyFilms.css
+++ b/src/components/MyFilms/MyFilms.css
@@ -44,3 +44,36 @@
     opacity: 1;
     margin:1rem;
 }
+
+
+.Edit-form{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+}
+
+  .Edit-div input[type="text"],
+  .Edit-div input[type="password"],
+  .Edit-div input[type="number"] {
+    font-size: 1rem;
+    width: 150px;
+    margin-right: 1rem;
+    background-color: #2c3440;
+    border: none;
+    border-radius: 0.2rem;
+    box-shadow: inset 0 -1px 0 #456;
+    box-sizing: border-box;
+    color: #89a;
+  }
+
+  .Edit-submit {
+    background: #4caf50;
+    font-family: GraphikWeb, sans-serif;
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    border: none;
+    padding: 0.4rem 0.8rem 0.3rem;
+    cursor: pointer;
+  }
